# donation-web-platform

./: .gitignore  .gitmodules  .release-please-manifest.json  CHANGELOG.md  Cargo.toml  README.md  release-please-config.json  script.sh  version.txt
.github/: mergeable.yml
.github/workflows/: _dummy_build_web_server.yml  _print_release_id.yml  _test_auto.yml  auto-merge-pr-label.yml  auto-merge-pull-request.yml  auto-merge-pull-request.yml.disable  automerge-pull-request.yml  automerge.yml  enforce-all-checks.yml  merge-pull-request.yml  monorepo-release.yml  publish-package-web-server.yml  release-web-server.yml  (+8 more)
docs/: development.md  development.md   project.md  setup.md  test.md
infrastructure/: ..env.template  .gitignore  .terraform.lock.hcl  init.tf.patch  main.tf  provider.tf  terraform.template.tfvars  variable.tf
manifest/: ingress.yml
provision/: .terraform.lock.hcl  kube-hetzner.tf  kube.tf  provider.tf  variable.tf
script/: bootstrap_onetime.sh  deploy.sh  dev.sh  development.sh  misc.sh  provision_cloud.sh  provision_dev.sh  provision_dev_machine.sh  provision_dev_minikube.sh
service/auth-token-exchange/: CHANGELOG.md  Cargo.toml  Dockerfile
service/auth-token-exchange/script/: dev.sh  docker.sh
service/auth-token-exchange/src/: auth.rs  lib.rs  main.rs
service/auth-token-exchange/src/auth/: handlers.rs  mod.rs
service/auth-token-exchange/src/auth_obsolete/: types.rs
service/auth-token-exchange/tests/: simple_dev.rs
src/: lib.rs
test/: api-performance.sh  data-disk-performance.sh  data-storage-results.txt  test-storage-iops.yml
(+209 files in other folders)
